--- a/README
+++ b/README
@@ -6,7 +6,7 @@ An Evented I/O B-tree for Node.js.
     Source:         http://github.com/bigeasy/strata
     Documentation:  http://github.com/bigeasy/strata/wiki
 
-    Issues:         http://bigeasy.lighthouseapp.com/projects/28908
+    Issues:         https://github.com/bigeasy/strata/issues
 
     License:        The MIT License
 
